After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 657825 - Fix cheese_effect_load_effects prototype
Fix cheese_effect_load_effects prototype
Status: RESOLVED FIXED
Product: cheese
Classification: Applications
Component: general
unspecified
Other All
: Normal normal
: 3.0
Assigned To: Cheese Maintainer(s)
Cheese Maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2011-08-31 13:50 UTC by Emilio Pozuelo Monfort
Modified: 2011-09-05 23:44 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix cheese_effect_load_effects prototype (862 bytes, patch)
2011-08-31 13:50 UTC, Emilio Pozuelo Monfort
committed Details | Review

Description Emilio Pozuelo Monfort 2011-08-31 13:50:11 UTC
Without this patch, if you include cheese-effect.h you'll get a warning like:

/opt/cheese/include/cheese/cheese-effect.h:62:1: error: function declaration isn’t a prototype [-Werror=strict-prototypes]
Comment 1 Emilio Pozuelo Monfort 2011-08-31 13:50:13 UTC
Created attachment 195295 [details] [review]
Fix cheese_effect_load_effects prototype
Comment 2 Kat 2011-09-05 23:43:16 UTC
Merged to master for the 3.1.91 release in commit 	dacd859be6373d628724909f02a4c86aa49a1248.