Fix cheese_effect_load_effects prototype

https://bugzilla.gnome.org/show_bug.cgi?id=657825